Layout 4: All elements are on the screen in correct area but alignment is wrong

--- a/Week 1/4 CSS Best Practices/Day 3/Layout 4/Layout 4 (Without Help)/style.css
+++ b/Week 1/4 CSS Best Practices/Day 3/Layout 4/Layout 4 (Without Help)/style.css
@@ -14,6 +14,7 @@
 .box-wrapper {
   display: flex;
   flex-wrap: wrap;
+  height: 100%;
   width: 50%;
   margin: 24px;
   justify-content: center;
@@ -24,19 +25,24 @@
   border: 2px solid lightgray;
   height: 50px;
   width: 100%;
-  margin: 24px 0 0 0;
+  padding: 24px 0 0 0;
 }
 
 .big-box {
   border: 2px solid lightgray;
   height: 200px;
   width: 50%;
-  margin: 24px 24px 24px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 24px;
+  
 }
 
 .tiny-box {
   border: 2px solid lightgray;
   height: 50px;
-  width: 50px;
-  margin: 24px 24px 24px 0;
+  width: 80px;
+  padding: 24px 0 0 24px;
+  margin: 5px;
 }
